--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.11.4",
+    "gray-matter": "^4.0.3",
     "next": "^15.3.2",
     "particles": "^0.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-tsparticles": "^2.12.2",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1",
     "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
