--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/marked": "^5.0.2",
     "marked": "^16.1.0",
     "next": "^15.3.2",
