--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 # Variables de entorno para AQXION Website
 NEXT_PUBLIC_GOOGLE_SCRIPT_URL=https://script.google.com/macros/s/AKfycbxyXFlpt_bTk-JRdd66UKg3ZK7iSwboB56QiZbB6zRLbE82-SE3CLeSGhN0iVPPzwt2/exec
 NEXT_PUBLIC_CALENDLY_URL=https://calendly.com/luis-aqxion/30min
-NOTIFICATION_EMAIL=contacto@aqxion.com
+NOTIFICATION_EMAIL=deal@aqxion.com
 NODE_ENV=development
 
 # Google Analytics / Tag Manager
