--- a/package.json
+++ b/package.json
@@ -8,19 +8,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.5",
     "@tailwindcss/typography": "^0.5.16",
     "@types/marked": "^5.0.2",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.7",
+    "lucide-react": "^0.525.0",
     "marked": "^16.1.0",
     "next": "^15.3.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19.1.4",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.6",
     "typescript": "^5"
   }
 }
