feat: Sistema de Onboarding Mágico Completo
 Experiencia mágica para clientes que invirtieron S/.1,500

 CARACTERÍSTICAS PRINCIPALES:
- WelcomeModal cinematográfico con animaciones Framer Motion
- BusinessInfoForm profesional de 2 pasos con validación
- OnboardingFlow inteligente con detección de primer login
- API endpoints reales para gestión de estado de onboarding
- Hook useOnboarding con integración completa a BD

 EXPERIENCIA DEL CLIENTE:
- Bienvenida personalizada validando inversión
- Formulario elegante para información del negocio
- Configuración automática del portal
- Creación de tareas iniciales
- Persistencia en base de datos real

 IMPLEMENTACIÓN TÉCNICA:
- Zod para validación de datos
- API routes: /api/portal/onboarding, /api/portal/onboarding-status
- Componentes animados con Framer Motion
- Estados sincronizados con base de datos
- Correcciones de tipos TypeScript para Next.js 15

 CORRECCIONES BUILD:
- Compatibilidad con parámetros dinámicos Next.js 15
- Alineación de esquemas Prisma con API routes
- Limpieza de archivos obsoletos (usePortalDemo, page-old)
- Manejo correcto de tipos Date vs string
- Corrección de campos Prisma (status vs completed, timestamp vs createdAt)

 RESULTADO:
Portal completamente funcional con experiencia de onboarding
que justifica la inversión premium de S/.1,500

--- a/.env.local
+++ b/.env.local
@@ -6,3 +6,14 @@ NODE_ENV=development
 
 # Google Analytics / Tag Manager
 NEXT_PUBLIC_GTM_ID=GTM-TGD5LDTN
+
+# Base URL for NextAuth
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=your_nextauth_secret_change_this_in_production
+
+# Google OAuth (opcional - para registro con Google)
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+# Database URL (SQLite para desarrollo)
+DATABASE_URL="file:./dev.db"
