--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "postinstall": "prisma generate",
-    "start": "next start"
+    "start": "next start",
+    "seed": "tsx prisma/seed.ts",
+    "db:seed": "npx prisma db seed"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
