--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,33 @@
 {
   "buildCommand": "prisma generate && npm run build",
-  "installCommand": "npm install && npx prisma generate"
+  "installCommand": "npm install && npx prisma generate",
+  "env": {
+    "NEXTAUTH_URL": "https://app.aqxion.com",
+    "NEXTAUTH_SECRET": "aqx_prod_secret_2025_ultra_secure_xyz789abc123def456",
+    "NODE_ENV": "production"
+  },
+  "functions": {
+    "src/app/api/**/*.ts": {
+      "maxDuration": 30
+    }
+  },
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "origin-when-cross-origin"
+        }
+      ]
+    }
+  ]
 }
