--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcryptjs": "^2.4.6",
     "@types/marked": "^5.0.2",
+    "@types/node": "^20",
+    "@types/react": "^19.1.4",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
@@ -32,11 +34,9 @@
     "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
+    "typescript": "^5",
     "zod": "^4.0.10"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19.1.4",
-    "typescript": "^5"
   }
 }
