--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "db:seed": "npx prisma db seed"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.10.0",
     "@headlessui/react": "^2.2.5",
     "@prisma/client": "^6.12.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.52.1",
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcryptjs": "^2.4.6",
     "@types/marked": "^5.0.2",
@@ -22,21 +24,20 @@
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.1",
     "framer-motion": "^12.23.7",
     "lucide-react": "^0.525.0",
     "marked": "^16.1.0",
     "next": "^15.3.2",
-    "next-auth": "^4.24.11",
     "postcss": "^8.5.6",
     "prisma": "^6.12.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
+    "readline": "^1.3.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5",
     "zod": "^4.0.10"
-  },
-  "devDependencies": {
   }
 }
