--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prisma": "^6.12.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.61.1",
     "react-intersection-observer": "^9.16.0",
     "readline": "^1.3.0",
     "tailwind-merge": "^3.3.1",
