feat: Remove unnecessary files and configurations for landing page only
- Deleted `vercel.json` configuration file.
- Added `README-LANDING.md` for landing page documentation.
- Created cleanup scripts to remove unused components, pages, and configurations.
- Simplified project structure to retain only landing page and essential components.
- Removed all backend-related files, hooks, and documentation.
- Ensured only landing page functionality remains intact.

--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
-    "postinstall": "prisma generate",
-    "start": "next start",
-    "seed": "tsx prisma/seed.ts",
-    "db:seed": "npx prisma db seed"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.5",
