--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5",
     "zod": "^4.0.10"
+  },
+  "devDependencies": {
+    "eslint": "9.32.0",
+    "eslint-config-next": "15.4.4"
   }
 }
